--- a/package.json
+++ b/package.json
@@ -13,8 +13,14 @@
         "start": "webpack-dev-server --host localhost --port 8080 --progress"
     },
     "babel": {
-        "presets": ["es2015", "react", "stage-3"],
-        "plugins": ["react-hot-loader/babel"]
+        "presets": [
+            "es2015",
+            "react",
+            "stage-3"
+        ],
+        "plugins": [
+            "react-hot-loader/babel"
+        ]
     },
     "author": "JJ Rafael",
     "license": "MIT",
@@ -76,7 +82,7 @@
         "eslint-plugin-relay": "0.0.8",
         "extract-text-webpack-plugin": "^1.0.1",
         "file-loader": "^0.10.1",
-        "firebase": "^4.6.0",
+        "firebase": "^4.6.1",
         "ignore-styles": "^5.0.1",
         "image-webpack-loader": "^3.2.0",
         "jest": "^20.0.3",
